--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -2,5 +2,24 @@
 @model canvas_lms.Pages.LoginModel
 @{
 }
-
-<div>this is login page</div>
+<div class="d-flex justify-content-center">
+    <div style="font-size:2rem">
+        Welcome to login screen
+    </div>
+</div>
+<form>
+    <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
