--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8,7 +8,11 @@ html {
   }
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+.btn:focus,
+.btn:active:focus,
+.btn-link.nav-link:focus,
+.form-control:focus,
+.form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
@@ -21,11 +25,38 @@ body {
   margin-bottom: 60px;
 }
 
-.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
+.form-floating > .form-control-plaintext::placeholder,
+.form-floating > .form-control::placeholder {
   color: var(--bs-secondary-color);
   text-align: end;
 }
 
-.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
+.form-floating > .form-control-plaintext:focus::placeholder,
+.form-floating > .form-control:focus::placeholder {
   text-align: start;
+}
+
+/* index.cshtml */
+.index-container {
+  display: flex;
+  flex-wrap: wrap;
+
+  gap: 20px;
+  width: 100%;
+}
+
+.index-content {
+  height: 200px;
+  width: 300px;
+  overflow: hidden;
+  border: 2px solid #ccc;
+  text-align: center;
+  font-size: 1.2rem;
+  text-decoration: none;
+}
+.box {
+  height: 100px;
+  width: 100px;
+  background-color: red;
+  overflow: hidden;
 }
