--- a/Pages/Courses/Details.cshtml
+++ b/Pages/Courses/Details.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Course.Lecturer)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Course.Lecturer.Id)
+            @Html.DisplayFor(model => model.Course.Lecturer.User.Name)
         </dd>
     </dl>
 </div>
