--- a/Pages/CourseReviews/Delete.cshtml
+++ b/Pages/CourseReviews/Delete.cshtml
@@ -2,51 +2,46 @@
 @model CanvasLMS.Pages.CourseReviews.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Review";
 }
 
-<h1>Delete</h1>
+<h1>Delete Review</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>CourseReview</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseReview.CourseEnrollment)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CourseReview.CourseEnrollment.Id)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseReview.Student)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CourseReview.Student.Id)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseReview.Rating)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CourseReview.Rating)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseReview.Comment)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CourseReview.Comment)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseReview.CreatedAt)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CourseReview.CreatedAt)
-        </dd>
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="CourseReview.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+<h4>@Model.Course.Name</h4>
+
+<div class="alert alert-warning" role="alert">
+    Are you sure you want to delete this review?
 </div>
+
+<div class="card mb-4">
+    <div class="card-body">
+        <div class="mb-3">
+            <h5>Rating</h5>
+            <div>
+                @for (int i = 0; i < Model.CourseReview.Rating; i++)
+                {
+                    <span class="text-warning">★</span>
+                }
+                @for (int i = Model.CourseReview.Rating; i < 5; i++)
+                {
+                    <span class="text-muted">☆</span>
+                }
+            </div>
+        </div>
+
+        <div class="mb-3">
+            <h5>Your Review</h5>
+            <p class="mb-0">@Model.CourseReview.Comment</p>
+        </div>
+
+        <div class="text-muted">
+            <small>Posted on @Model.CourseReview.CreatedAt.ToString("MMMM dd, yyyy")</small>
+        </div>
+    </div>
+</div>
+
+<form method="post">
+    <input type="hidden" asp-for="CourseReview.Id" />
+    <button type="submit" class="btn btn-danger">Delete Review</button>
+    <a asp-page="Index" asp-route-selectedCourseId="@Model.Course.Id" class="btn btn-secondary">Cancel</a>
+</form>
