--- a/Pages/Courses/Delete.cshtml
+++ b/Pages/Courses/Delete.cshtml
@@ -34,7 +34,7 @@
             @Html.DisplayNameFor(model => model.Course.Lecturer)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Course.Lecturer.Id)
+            @Html.DisplayFor(model => model.Course.Lecturer.User.Name)
         </dd>
     </dl>
     
