--- a/Pages/Courses/Index.cshtml
+++ b/Pages/Courses/Index.cshtml
@@ -41,7 +41,7 @@
                 @Html.DisplayFor(modelItem => item.Faculty.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Lecturer.Id)
+                @Html.DisplayFor(modelItem => item.Lecturer.User.Name)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
