--- a/Pages/Semesters/Create.cshtml
+++ b/Pages/Semesters/Create.cshtml
@@ -1,18 +1,18 @@
 @page
 @model CanvasLMS.Pages.Semesters.CreateModel
 
-        @{
-        ViewData["Title"] = "Create";
-        }
-        
-        <h1>Create</h1>
-        
-    <h4>Semester</h4>
-    <hr />
-    <div class="row">
+@{
+    ViewData["Title"] = "Create";
+}
+
+<h1>Create</h1>
+
+<h4>Semester</h4>
+<hr />
+<div class="row">
     <div class="col-md-4">
-    <form method="post">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <span class="text-danger">*</span>
                 <label asp-for="Semester.Name" class="control-label"></label>
@@ -30,9 +30,17 @@
                 <span asp-validation-for="Semester.EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Semester.FacultyId" class="control-label"></label>
-                <input asp-for="Semester.FacultyId" class="form-control" />
+                <span class="text-danger">*</span>
+                <label asp-for="Semester.FacultyId" class="control-label">Faculty</label>
+                <select asp-for="Semester.FacultyId" class="form-control" asp-items="Model.FacultyList">
+                    <option value="">-- Select Faculty --</option>
+                </select>
                 <span asp-validation-for="Semester.FacultyId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Semester.Status" class="control-label"></label>
+                <select asp-for="Semester.Status" class="form-control" asp-items="Html.GetEnumSelectList<CanvasLMS.Models.SemesterStatus>()"></select>
+                <span asp-validation-for="Semester.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -44,4 +52,3 @@
 <div>
     <a asp-page="Index">Back to List</a>
 </div>
-
