--- a/Pages/Semesters/Details.cshtml
+++ b/Pages/Semesters/Details.cshtml
@@ -30,10 +30,16 @@
             @Html.DisplayFor(model => model.Semester.EndDate)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Semester.FacultyId)
+            Faculty
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Semester.FacultyId)
+            @Html.DisplayFor(model => model.Semester.Faculty.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Semester.Status)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Semester.Status)
         </dd>
     </dl>
 </div>
