--- a/Pages/Semesters/Edit.cshtml
+++ b/Pages/Semesters/Edit.cshtml
@@ -33,10 +33,17 @@
                 <span asp-validation-for="Semester.EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                
-                <label asp-for="Semester.FacultyId" class="control-label"></label>
-                <input asp-for="Semester.FacultyId" class="form-control" />
+                <span class="text-danger">*</span>
+                <label asp-for="Semester.FacultyId" class="control-label">Faculty</label>
+                <select asp-for="Semester.FacultyId" class="form-control" asp-items="Model.FacultyList">
+                    <option value="">-- Select Faculty --</option>
+                </select>
                 <span asp-validation-for="Semester.FacultyId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Semester.Status" class="control-label"></label>
+                <select asp-for="Semester.Status" class="form-control" asp-items="Html.GetEnumSelectList<CanvasLMS.Models.SemesterStatus>()"></select>
+                <span asp-validation-for="Semester.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -48,4 +55,3 @@
 <div>
     <a asp-page="./Index">Back to List</a>
 </div>
-
