--- a/Pages/Semesters/Index.cshtml
+++ b/Pages/Semesters/Index.cshtml
@@ -23,7 +23,10 @@
                 @Html.DisplayNameFor(model => model.Semester[0].EndDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Semester[0].FacultyId)
+                Faculty
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Semester[0].Status)
             </th>
             <th></th>
         </tr>
@@ -41,7 +44,10 @@
                 @Html.DisplayFor(modelItem => item.EndDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FacultyId)
+                @Html.DisplayFor(modelItem => item.Faculty.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
