add payment link

--- a/Pages/Shared/Components/Navbar/Default.cshtml
+++ b/Pages/Shared/Components/Navbar/Default.cshtml
@@ -29,6 +29,7 @@
                                 <li><a class="dropdown-item" asp-page="/CourseReviews/Index">Course Evaluation</a></li>
                                 <li><a class="dropdown-item" asp-page="/StudentStatement/Index">Student Statement</a></li>
                                 <li><a class="dropdown-item" asp-page="/RegistrationSummary/Index">Class Timetable</a></li>
+                                <li><a class="dropdown-item" asp-page="/Payments/Index">Payments</a></li>
                             </ul>
                         </li>
                     }
