Add Add/Drop Approval in Admin

--- a/Pages/Shared/Components/Navbar/Default.cshtml
+++ b/Pages/Shared/Components/Navbar/Default.cshtml
@@ -45,6 +45,7 @@
                                 <li><a class="dropdown-item" asp-page="/Semesters/Create">Manage Semesters</a></li>
                                 <li><a class="dropdown-item" asp-page="/Payments/Create">Manage Payments</a></li>
                                 <li><a class="dropdown-item" asp-page="/Courses/Create">Manage Courses</a></li>
+                                <li><a class="dropdown-item" asp-page="/CourseEnrollments/AddDrop/Manage/Index">Add/Drop Requests</a></li>
                             </ul>
                         </li>
                     }
